New added files.

--- a/experiments/lbs_convex_hull.ipynb
+++ b/experiments/lbs_convex_hull.ipynb
@@ -83,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Let's create some per-vertex skinning weights. Each vertex has a weight for each handle.\n",
@@ -103,7 +105,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## The lbs() function generates the weighted average transformation.\n",
@@ -175,6 +179,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -187,6 +192,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -220,7 +226,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Use SVD to get the lower dimensional space.\n",
@@ -236,7 +244,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 5.9518,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "array([ 5.8194,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
        "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
        "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
        "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
@@ -282,7 +290,7 @@
     {
      "data": {
       "text/plain": [
-       "6.6613381477509392e-16"
+       "1.3322676295501878e-15"
       ]
      },
      "execution_count": 15,
@@ -298,7 +306,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Formalize the above with functions.\n",
@@ -335,7 +345,7 @@
     {
      "data": {
       "text/plain": [
-       "5.5511151231257827e-16"
+       "6.9388939039072284e-16"
       ]
      },
      "execution_count": 17,
@@ -354,6 +364,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -372,106 +383,106 @@
     {
      "data": {
       "text/plain": [
-       "array([[-1.02061681],\n",
-       "       [-0.99999829],\n",
-       "       [-0.97937977],\n",
-       "       [-0.95876125],\n",
-       "       [-0.93814273],\n",
-       "       [-0.9175242 ],\n",
-       "       [-0.89690568],\n",
-       "       [-0.87628716],\n",
-       "       [-0.85566864],\n",
-       "       [-0.83505012],\n",
-       "       [-0.8144316 ],\n",
-       "       [-0.79381308],\n",
-       "       [-0.77319455],\n",
-       "       [-0.75257603],\n",
-       "       [-0.73195751],\n",
-       "       [-0.71133899],\n",
-       "       [-0.69072047],\n",
-       "       [-0.67010195],\n",
-       "       [-0.64948343],\n",
-       "       [-0.6288649 ],\n",
-       "       [-0.60824638],\n",
-       "       [-0.58762786],\n",
-       "       [-0.56700934],\n",
-       "       [-0.54639082],\n",
-       "       [-0.5257723 ],\n",
-       "       [-0.50515378],\n",
-       "       [-0.48453525],\n",
-       "       [-0.46391673],\n",
-       "       [-0.44329821],\n",
-       "       [-0.42267969],\n",
-       "       [-0.40206117],\n",
-       "       [-0.38144265],\n",
-       "       [-0.36082413],\n",
-       "       [-0.3402056 ],\n",
-       "       [-0.31958708],\n",
-       "       [-0.29896856],\n",
-       "       [-0.27835004],\n",
-       "       [-0.25773152],\n",
-       "       [-0.237113  ],\n",
-       "       [-0.21649448],\n",
-       "       [-0.19587595],\n",
-       "       [-0.17525743],\n",
-       "       [-0.15463891],\n",
-       "       [-0.13402039],\n",
-       "       [-0.11340187],\n",
-       "       [-0.09278335],\n",
-       "       [-0.07216483],\n",
-       "       [-0.0515463 ],\n",
-       "       [-0.03092778],\n",
-       "       [-0.01030926],\n",
-       "       [ 0.01030926],\n",
-       "       [ 0.03092778],\n",
-       "       [ 0.0515463 ],\n",
-       "       [ 0.07216483],\n",
-       "       [ 0.09278335],\n",
-       "       [ 0.11340187],\n",
-       "       [ 0.13402039],\n",
-       "       [ 0.15463891],\n",
-       "       [ 0.17525743],\n",
-       "       [ 0.19587595],\n",
-       "       [ 0.21649448],\n",
-       "       [ 0.237113  ],\n",
-       "       [ 0.25773152],\n",
-       "       [ 0.27835004],\n",
-       "       [ 0.29896856],\n",
-       "       [ 0.31958708],\n",
-       "       [ 0.3402056 ],\n",
-       "       [ 0.36082413],\n",
-       "       [ 0.38144265],\n",
-       "       [ 0.40206117],\n",
-       "       [ 0.42267969],\n",
-       "       [ 0.44329821],\n",
-       "       [ 0.46391673],\n",
-       "       [ 0.48453525],\n",
-       "       [ 0.50515378],\n",
-       "       [ 0.5257723 ],\n",
-       "       [ 0.54639082],\n",
-       "       [ 0.56700934],\n",
-       "       [ 0.58762786],\n",
-       "       [ 0.60824638],\n",
-       "       [ 0.6288649 ],\n",
-       "       [ 0.64948343],\n",
-       "       [ 0.67010195],\n",
-       "       [ 0.69072047],\n",
-       "       [ 0.71133899],\n",
-       "       [ 0.73195751],\n",
-       "       [ 0.75257603],\n",
-       "       [ 0.77319455],\n",
-       "       [ 0.79381308],\n",
-       "       [ 0.8144316 ],\n",
-       "       [ 0.83505012],\n",
-       "       [ 0.85566864],\n",
-       "       [ 0.87628716],\n",
-       "       [ 0.89690568],\n",
-       "       [ 0.9175242 ],\n",
-       "       [ 0.93814273],\n",
-       "       [ 0.95876125],\n",
-       "       [ 0.97937977],\n",
-       "       [ 0.99999829],\n",
-       "       [ 1.02061681]])"
+       "array([[ 0.99791981],\n",
+       "       [ 0.97775981],\n",
+       "       [ 0.95759982],\n",
+       "       [ 0.93743982],\n",
+       "       [ 0.91727982],\n",
+       "       [ 0.89711983],\n",
+       "       [ 0.87695983],\n",
+       "       [ 0.85679984],\n",
+       "       [ 0.83663984],\n",
+       "       [ 0.81647984],\n",
+       "       [ 0.79631985],\n",
+       "       [ 0.77615985],\n",
+       "       [ 0.75599986],\n",
+       "       [ 0.73583986],\n",
+       "       [ 0.71567986],\n",
+       "       [ 0.69551987],\n",
+       "       [ 0.67535987],\n",
+       "       [ 0.65519987],\n",
+       "       [ 0.63503988],\n",
+       "       [ 0.61487988],\n",
+       "       [ 0.59471989],\n",
+       "       [ 0.57455989],\n",
+       "       [ 0.55439989],\n",
+       "       [ 0.5342399 ],\n",
+       "       [ 0.5140799 ],\n",
+       "       [ 0.49391991],\n",
+       "       [ 0.47375991],\n",
+       "       [ 0.45359991],\n",
+       "       [ 0.43343992],\n",
+       "       [ 0.41327992],\n",
+       "       [ 0.39311992],\n",
+       "       [ 0.37295993],\n",
+       "       [ 0.35279993],\n",
+       "       [ 0.33263994],\n",
+       "       [ 0.31247994],\n",
+       "       [ 0.29231994],\n",
+       "       [ 0.27215995],\n",
+       "       [ 0.25199995],\n",
+       "       [ 0.23183996],\n",
+       "       [ 0.21167996],\n",
+       "       [ 0.19151996],\n",
+       "       [ 0.17135997],\n",
+       "       [ 0.15119997],\n",
+       "       [ 0.13103997],\n",
+       "       [ 0.11087998],\n",
+       "       [ 0.09071998],\n",
+       "       [ 0.07055999],\n",
+       "       [ 0.05039999],\n",
+       "       [ 0.03023999],\n",
+       "       [ 0.01008   ],\n",
+       "       [-0.01008   ],\n",
+       "       [-0.03023999],\n",
+       "       [-0.05039999],\n",
+       "       [-0.07055999],\n",
+       "       [-0.09071998],\n",
+       "       [-0.11087998],\n",
+       "       [-0.13103997],\n",
+       "       [-0.15119997],\n",
+       "       [-0.17135997],\n",
+       "       [-0.19151996],\n",
+       "       [-0.21167996],\n",
+       "       [-0.23183996],\n",
+       "       [-0.25199995],\n",
+       "       [-0.27215995],\n",
+       "       [-0.29231994],\n",
+       "       [-0.31247994],\n",
+       "       [-0.33263994],\n",
+       "       [-0.35279993],\n",
+       "       [-0.37295993],\n",
+       "       [-0.39311992],\n",
+       "       [-0.41327992],\n",
+       "       [-0.43343992],\n",
+       "       [-0.45359991],\n",
+       "       [-0.47375991],\n",
+       "       [-0.49391991],\n",
+       "       [-0.5140799 ],\n",
+       "       [-0.5342399 ],\n",
+       "       [-0.55439989],\n",
+       "       [-0.57455989],\n",
+       "       [-0.59471989],\n",
+       "       [-0.61487988],\n",
+       "       [-0.63503988],\n",
+       "       [-0.65519987],\n",
+       "       [-0.67535987],\n",
+       "       [-0.69551987],\n",
+       "       [-0.71567986],\n",
+       "       [-0.73583986],\n",
+       "       [-0.75599986],\n",
+       "       [-0.77615985],\n",
+       "       [-0.79631985],\n",
+       "       [-0.81647984],\n",
+       "       [-0.83663984],\n",
+       "       [-0.85679984],\n",
+       "       [-0.87695983],\n",
+       "       [-0.89711983],\n",
+       "       [-0.91727982],\n",
+       "       [-0.93743982],\n",
+       "       [-0.95759982],\n",
+       "       [-0.97775981],\n",
+       "       [-0.99791981]])"
       ]
      },
      "execution_count": 19,
@@ -486,7 +497,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
@@ -519,7 +532,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pmin, pmax = uncorrelated_poses.argmin(), uncorrelated_poses.argmax()\n",
@@ -529,7 +544,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "poses_handles_restored = restore( array( [ uncorrelated_poses[ pmin ], uncorrelated_poses[ pmax ] ] ) )\n",
@@ -540,7 +557,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print( poses_handles.shape )\n",
@@ -550,7 +569,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "abs( poses_handles_restored[0] - poses_handles[1] ).max()"
@@ -559,7 +580,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "abs( poses_handles_restored[1] - poses_handles[0] ).max()"
